This is the 2nd commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<title name="Hello"/>
+<title >This is Home</title>
 <body color="Red">
-<h1> Siraj </h1>
+<h1 color=red> Siraj </h1>
+<h2> Testing Zone </h2>
 </body>
 
 </html>
